test/Dialect/LLZK/struct_params_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentA1<[@A, @B]> {
    function.def @compute() -> !struct.struct<@ComponentA1<[@A, @B]>> {
      %self = struct.new : !struct.struct<@ComponentA1<[@A, @B]>>
      function.return %self : !struct.struct<@ComponentA1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentA1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentA2<[@C]> {
    // expected-error@+1 {{'struct.struct' type has 3 parameters but "ComponentA1" expects 2}}
    struct.field @f3 : !struct.struct<@ComponentA1<[5, @C, 6]>>

    function.def @compute() -> !struct.struct<@ComponentA2<[@C]>> {
      %self = struct.new : !struct.struct<@ComponentA2<[@C]>>
      function.return %self : !struct.struct<@ComponentA2<[@C]>>
    }

    function.def @constrain(%self: !struct.struct<@ComponentA2<[@C]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentB1<[@A, @B]> {
    function.def @compute() -> !struct.struct<@ComponentB1<[@A, @B]>> {
      %self = struct.new : !struct.struct<@ComponentB1<[@A, @B]>>
      function.return %self : !struct.struct<@ComponentB1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentB1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentB2 {
    struct.field @f3 : !struct.struct<@ComponentB1<[5,5]>>

    function.def @compute() -> !struct.struct<@ComponentB2> {
      %self = struct.new : !struct.struct<@ComponentB2>
      function.return %self : !struct.struct<@ComponentB2>
    }

    function.def @constrain(%self: !struct.struct<@ComponentB2>) {
      // expected-error@+1 {{'struct.readf' op has wrong type; expected '!struct.struct<@ComponentB1<[5, 5]>>', got '!struct.struct<@ComponentB1<[5, 6]>>'}}
      %b = struct.readf %self[@f3] : !struct.struct<@ComponentB2>, !struct.struct<@ComponentB1<[5,6]>>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentC1<[@A, @B]> {
    function.def @compute() -> !struct.struct<@ComponentC1<[@A, @B]>> {
      %self = struct.new : !struct.struct<@ComponentC1<[@A, @B]>>
      function.return %self : !struct.struct<@ComponentC1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentC1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentC2 {
    struct.field @f3 : !struct.struct<@ComponentC1<[5,5]>>

    function.def @compute() -> !struct.struct<@ComponentC2> {
      %self = struct.new : !struct.struct<@ComponentC2>
      function.return %self : !struct.struct<@ComponentC2>
    }

    function.def @constrain(%self: !struct.struct<@ComponentC2>) {
      // expected-error@+1 {{'struct.readf' op has wrong type; expected '!struct.struct<@ComponentC1<[5, 5]>>', got '!struct.struct<@ComponentC1<[5, 6, 4]>>'}}
      %b = struct.readf %self[@f3] : !struct.struct<@ComponentC2>, !struct.struct<@ComponentC1<[5,6,4]>>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentD1<[@A, @B]> {
    function.def @compute() -> !struct.struct<@ComponentD1<[@A, @B]>> {
      %self = struct.new : !struct.struct<@ComponentD1<[@A, @B]>>
      function.return %self : !struct.struct<@ComponentD1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentD1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentD2 {
    struct.field @f3 : !struct.struct<@ComponentD1<[5,5]>>

    function.def @compute() -> !struct.struct<@ComponentD2> {
      %self = struct.new : !struct.struct<@ComponentD2>
      function.return %self : !struct.struct<@ComponentD2>
    }

    function.def @constrain(%self: !struct.struct<@ComponentD2>) {
      // expected-error@+1 {{'struct.readf' op has wrong type; expected '!struct.struct<@ComponentD1<[5, 5]>>', got '!struct.struct<@ComponentD1<[5]>>'}}
      %b = struct.readf %self[@f3] : !struct.struct<@ComponentD2>, !struct.struct<@ComponentD1<[5]>>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentE1<[@A, @B]> {
    function.def @compute() -> !struct.struct<@ComponentE1<[@A, @B]>> {
      %self = struct.new : !struct.struct<@ComponentE1<[@A, @B]>>
      function.return %self : !struct.struct<@ComponentE1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentE1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentE2<[@C]> {
    struct.field @f3 : !struct.struct<@ComponentE1<[5, @C]>>

    function.def @compute() -> !struct.struct<@ComponentE2<[@C]>> {
      %self = struct.new : !struct.struct<@ComponentE2<[@C]>>
      function.return %self : !struct.struct<@ComponentE2<[@C]>>
    }

    function.def @constrain(%self: !struct.struct<@ComponentE2<[@C]>>) {
      // expected-note@+1 {{prior use here}}
      %b = struct.readf %self[@f3] : !struct.struct<@ComponentE2<[@C]>>, !struct.struct<@ComponentE1<[5, @C]>>
      // expected-error@+1 {{use of value '%b' expects different type than prior uses: '!struct.struct<@ComponentE1<[5, @C, 4]>>' vs '!struct.struct<@ComponentE1<[5, @C]>>'}}
      function.call @ComponentE1::@constrain(%b) : (!struct.struct<@ComponentE1<[5,@C,4]>>) -> ()
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentF1<[@A, @B]> {
    function.def @compute() -> !struct.struct<@ComponentF1<[@A, @B]>> {
      %self = struct.new : !struct.struct<@ComponentF1<[@A, @B]>>
      function.return %self : !struct.struct<@ComponentF1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentF1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentF2<[@C]> {
    // expected-error@+1 {{'struct.struct' type has 3 parameters but "ComponentF1" expects 2}}
    function.def @compute(%0: !struct.struct<@ComponentF1<[5,@C,88]>>) -> !struct.struct<@ComponentF2<[@C]>> {
      %self = struct.new : !struct.struct<@ComponentF2<[@C]>>
      function.return %self : !struct.struct<@ComponentF2<[@C]>>
    }

    function.def @constrain(%self: !struct.struct<@ComponentF2<[@C]>>, %0: !struct.struct<@ComponentF1<[5,@C,88]>>) {
      function.return
    }
  }
}
// -----
// No parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentG<[@A, @B]> { // expected-note {{should be type of this 'struct.def'}}
    // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@ComponentG<[@A, @B]>" as return type}}
    function.def @compute() -> !struct.struct<@ComponentG> {
      %self = struct.new : !struct.struct<@ComponentG>
      function.return %self : !struct.struct<@ComponentG>
    }
    function.def @constrain(%self: !struct.struct<@ComponentG>) { function.return }
  }
}
// -----
// Fewer parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentH<[@A, @B]> { // expected-note {{should be type of this 'struct.def'}}
    // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@ComponentH<[@A, @B]>" as return type}}
    function.def @compute() -> !struct.struct<@ComponentH<[@A]>> {
      %self = struct.new : !struct.struct<@ComponentH<[@A]>>
      function.return %self : !struct.struct<@ComponentH<[@A]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentH<[@A]>>) { function.return }
  }
}
// -----
// More parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentI<[@A, @B]> { // expected-note {{should be type of this 'struct.def'}}
    // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@ComponentI<[@A, @B]>" as return type}}
    function.def @compute() -> !struct.struct<@ComponentI<[@A, @B, @B]>> {
      %self = struct.new : !struct.struct<@ComponentI<[@A, @B, @B]>>
      function.return %self : !struct.struct<@ComponentI<[@A, @B, @B]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentI<[@A, @B, @B]>>) { function.return }
  }
}
// -----
// Different parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentJ<[@A, @B]> { // expected-note {{should be type of this 'struct.def'}}
    // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@ComponentJ<[@A, @B]>" as return type}}
    function.def @compute() -> !struct.struct<@ComponentJ<[@B, @A]>> {
      %self = struct.new : !struct.struct<@ComponentJ<[@B, @A]>>
      function.return %self : !struct.struct<@ComponentJ<[@B, @A]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentJ<[@B, @A]>>) { function.return }
  }
}
// -----
// Unknown parameters used to reference self type within component
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentK<[@A, @B]> {
    // expected-error@+2 {{'function.def' op references unknown symbol "@C"}}
    // expected-error@+1 {{'function.def' op references unknown symbol "@D"}}
    function.def @compute() -> !struct.struct<@ComponentK<[@C, @D]>> {
      %self = struct.new : !struct.struct<@ComponentK<[@C, @D]>>
      function.return %self : !struct.struct<@ComponentK<[@C, @D]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentK<[@C, @D]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentL1<[@Z]> { // expected-note {{type parameters must unify with parameters defined here}}
    function.def @compute() -> !struct.struct<@ComponentL1<[@Z]>> {
      %self = struct.new : !struct.struct<@ComponentL1<[@Z]>>
      function.return %self : !struct.struct<@ComponentL1<[@Z]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentL1<[@Z]>>)  { function.return }
  }
  struct.def @ComponentL2 {
    // expected-error@+1 {{Cannot unify parameters of type '!struct.struct<@ComponentL1>' with parameters of 'struct.def' "@ComponentL1<[@Z]>"}}
    struct.field @f : !struct.struct<@ComponentL1>

    function.def @compute() -> !struct.struct<@ComponentL2> {
      %self = struct.new : !struct.struct<@ComponentL2>
      function.return %self : !struct.struct<@ComponentL2>
    }
    function.def @constrain(%self: !struct.struct<@ComponentL2>)  { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    struct.def @ComponentM1<[@Z]> { // expected-note {{type parameters must unify with parameters defined here}}
      function.def @compute() -> !struct.struct<@a::@ComponentM1<[@Z]>> {
        %self = struct.new : !struct.struct<@a::@ComponentM1<[@Z]>>
        function.return %self : !struct.struct<@a::@ComponentM1<[@Z]>>
      }
      function.def @constrain(%self: !struct.struct<@a::@ComponentM1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentM2 {
      // expected-error@+1 {{Cannot unify parameters of type '!struct.struct<@a::@ComponentM1>' with parameters of 'struct.def' "@a::@ComponentM1<[@Z]>"}}
      struct.field @f : !struct.struct<@a::@ComponentM1>

      function.def @compute() -> !struct.struct<@b::@ComponentM2> {
        %self = struct.new : !struct.struct<@b::@ComponentM2>
        function.return %self : !struct.struct<@b::@ComponentM2>
      }
      function.def @constrain(%self: !struct.struct<@b::@ComponentM2>)  { function.return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    struct.def @ComponentN1 {
      function.def @compute() -> !struct.struct<@a::@ComponentN1> {
        %self = struct.new : !struct.struct<@a::@ComponentN1>
        function.return %self : !struct.struct<@a::@ComponentN1>
      }
      function.def @constrain(%self: !struct.struct<@a::@ComponentN1>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentN2<[@A]> {
      // expected-error@+1 {{'struct.struct' type has 2 parameters but "ComponentN1" expects 0}}
      struct.field @f : !struct.struct<@a::@ComponentN1<[@A, @A]>>

      function.def @compute() -> !struct.struct<@b::@ComponentN2<[@A]>> {
        %self = struct.new : !struct.struct<@b::@ComponentN2<[@A]>>
        function.return %self : !struct.struct<@b::@ComponentN2<[@A]>>
      }
      function.def @constrain(%self: !struct.struct<@b::@ComponentN2<[@A]>>)  { function.return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    struct.def @ComponentO1<[@Z]> {
      function.def @compute() -> !struct.struct<@a::@ComponentO1<[@Z]>> {
        %self = struct.new : !struct.struct<@a::@ComponentO1<[@Z]>>
        function.return %self : !struct.struct<@a::@ComponentO1<[@Z]>>
      }
      function.def @constrain(%self: !struct.struct<@a::@ComponentO1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentO2 {
      // expected-error@+1 {{'struct.field' op references unknown symbol "@A"}}
      struct.field @f : !struct.struct<@a::@ComponentO1<[@A]>>

      function.def @compute() -> !struct.struct<@b::@ComponentO2> {
        %self = struct.new : !struct.struct<@b::@ComponentO2>
        function.return %self : !struct.struct<@b::@ComponentO2>
      }
      function.def @constrain(%self: !struct.struct<@b::@ComponentO2>)  { function.return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    struct.def @ComponentP1<[@Z]> {
      function.def @compute() -> !struct.struct<@a::@ComponentP1<[@Z]>> {
        %self = struct.new : !struct.struct<@a::@ComponentP1<[@Z]>>
        function.return %self : !struct.struct<@a::@ComponentP1<[@Z]>>
      }
      function.def @constrain(%self: !struct.struct<@a::@ComponentP1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentP2 {
      // expected-error@+1 {{'struct.field' op references unknown symbol "@constrain"}}
      struct.field @f : !struct.struct<@a::@ComponentP1<[@constrain]>>

      function.def @compute() -> !struct.struct<@b::@ComponentP2> {
        %self = struct.new : !struct.struct<@b::@ComponentP2>
        function.return %self : !struct.struct<@b::@ComponentP2>
      }
      function.def @constrain(%self: !struct.struct<@b::@ComponentP2>)  { function.return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    struct.def @ComponentQ1<[@Z]> {
      function.def @compute() -> !struct.struct<@a::@ComponentQ1<[@Z]>> {
        %self = struct.new : !struct.struct<@a::@ComponentQ1<[@Z]>>
        function.return %self : !struct.struct<@a::@ComponentQ1<[@Z]>>
      }
      function.def @constrain(%self: !struct.struct<@a::@ComponentQ1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentQ2 {
      // expected-error@+1 {{ref "@b::@ComponentQ2::@constrain" in type '!struct.struct<@a::@ComponentQ1<[@b::@ComponentQ2::@constrain]>>' refers to a 'function.def' which is not allowed}}
      struct.field @f : !struct.struct<@a::@ComponentQ1<[@b::@ComponentQ2::@constrain]>>

      function.def @compute() -> !struct.struct<@b::@ComponentQ2> {
        %self = struct.new : !struct.struct<@b::@ComponentQ2>
        function.return %self : !struct.struct<@b::@ComponentQ2>
      }
      function.def @constrain(%self: !struct.struct<@b::@ComponentQ2>)  { function.return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    struct.def @ComponentR1<[@Z]> {
      function.def @compute() -> !struct.struct<@a::@ComponentR1<[@Z]>> {
        %self = struct.new : !struct.struct<@a::@ComponentR1<[@Z]>>
        function.return %self : !struct.struct<@a::@ComponentR1<[@Z]>>
      }
      function.def @constrain(%self: !struct.struct<@a::@ComponentR1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentR2 {
      // expected-error@+1 {{ref "@b" in type '!struct.struct<@a::@ComponentR1<[@b]>>' refers to a 'builtin.module' which is not allowed}}
      struct.field @f : !struct.struct<@a::@ComponentR1<[@b]>>

      function.def @compute() -> !struct.struct<@b::@ComponentR2> {
        %self = struct.new : !struct.struct<@b::@ComponentR2>
        function.return %self : !struct.struct<@b::@ComponentR2>
      }
      function.def @constrain(%self: !struct.struct<@b::@ComponentR2>)  { function.return }
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentS1<[@Z]> {
    function.def @compute() -> !struct.struct<@ComponentS1<[@Z]>> {
      %self = struct.new : !struct.struct<@ComponentS1<[@Z]>>
      function.return %self : !struct.struct<@ComponentS1<[@Z]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentS1<[@Z]>>)  { function.return }
  }
  struct.def @ComponentS2 {
    // expected-error@+1 {{ref "@ComponentS2" in type '!struct.struct<@ComponentS1<[@ComponentS2]>>' refers to a 'struct.def' which is not allowed}}
    struct.field @f : !struct.struct<@ComponentS1<[@ComponentS2]>>

    function.def @compute() -> !struct.struct<@ComponentS2> {
      %self = struct.new : !struct.struct<@ComponentS2>
      function.return %self : !struct.struct<@ComponentS2>
    }
    function.def @constrain(%self: !struct.struct<@ComponentS2>)  { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def private @some_function() -> ()
  struct.def @ComponentT1<[@Z]> {
    function.def @compute() -> !struct.struct<@ComponentT1<[@Z]>> {
      %self = struct.new : !struct.struct<@ComponentT1<[@Z]>>
      function.return %self : !struct.struct<@ComponentT1<[@Z]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentT1<[@Z]>>)  { function.return }
  }
  struct.def @ComponentT2 {
    // expected-error@+1 {{ref "@some_function" in type '!struct.struct<@ComponentT1<[@some_function]>>' refers to a 'function.def' which is not allowed}}
    struct.field @f : !struct.struct<@ComponentT1<[@some_function]>>

    function.def @compute() -> !struct.struct<@ComponentT2> {
      %self = struct.new : !struct.struct<@ComponentT2>
      function.return %self : !struct.struct<@ComponentT2>
    }
    function.def @constrain(%self: !struct.struct<@ComponentT2>)  { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  module @a {
    struct.def @ComponentU1<[@Z]> {
      function.def @compute() -> !struct.struct<@a::@ComponentU1<[@Z]>> {
        %self = struct.new : !struct.struct<@a::@ComponentU1<[@Z]>>
        function.return %self : !struct.struct<@a::@ComponentU1<[@Z]>>
      }
      function.def @constrain(%self: !struct.struct<@a::@ComponentU1<[@Z]>>)  { function.return }
    }
  }
  // expected-error@+1 {{'function.def' op references unknown symbol "@D"}}
  function.def @fun3(%0: !struct.struct<@a::@ComponentU1<[@D]>>) -> !struct.struct<@a::@ComponentU1<[@D]>> {
    function.return %0 : !struct.struct<@a::@ComponentU1<[@D]>>
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def @bad(%0: !felt.felt) {
    // expected-error@+1 {{'poly.read_const' op only valid within a 'struct.def' ancestor}}
    %1 = poly.read_const @X : !felt.felt
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentV<[@A]> { // expected-note {{must reference a parameter of this struct}}
    function.def @compute(%0: !felt.felt) -> !struct.struct<@ComponentV<[@A]>> {
      %self = struct.new : !struct.struct<@ComponentV<[@A]>>
      function.return %self : !struct.struct<@ComponentV<[@A]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentV<[@A]>>, %0: !felt.felt) {
      // expected-error@+1 {{'poly.read_const' op references unknown symbol "@X"}}
      %1 = poly.read_const @X : !felt.felt
      constrain.eq %0, %1 : !felt.felt
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{'struct.def' op has more than one parameter named "@A"}}
  struct.def @ComponentW<[@A, @A]> {
    function.def @compute() -> !struct.struct<@ComponentW<[@A, @A]>> {
      %self = struct.new : !struct.struct<@ComponentW<[@A, @A]>>
      function.return %self : !struct.struct<@ComponentW<[@A, @A]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentW<[@A, @A]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def @F() { function.return } // expected-note {{symbol already defined here}}
  // expected-error@+1 {{'struct.def' op parameter name "@F" conflicts with an existing symbol}}
  struct.def @ComponentX<[@F]> {
    function.def @compute() -> !struct.struct<@ComponentX<[@F]>> {
      %self = struct.new : !struct.struct<@ComponentX<[@F]>>
      function.return %self : !struct.struct<@ComponentX<[@F]>>
    }
    function.def @constrain(%self: !struct.struct<@ComponentX<[@F]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ReadConstBadTypeA<[@T]> {
    function.def @compute() -> !struct.struct<@ReadConstBadTypeA<[@T]>> {
      %self = struct.new : !struct.struct<@ReadConstBadTypeA<[@T]>>
      function.return %self : !struct.struct<@ReadConstBadTypeA<[@T]>>
    }
    function.def @constrain(%self: !struct.struct<@ReadConstBadTypeA<[@T]>>) {
      // expected-error@+1 {{'poly.read_const' op result #0 must be integral, felt, or typevar type, but got '!array.array<54 x index>'}}
      %0 = poly.read_const @T : !array.array<54 x index>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ReadConstBadTypeB<[@T]> {
    function.def @compute() -> !struct.struct<@ReadConstBadTypeB<[@T]>> {
      %self = struct.new : !struct.struct<@ReadConstBadTypeB<[@T]>>
      function.return %self : !struct.struct<@ReadConstBadTypeB<[@T]>>
    }
    function.def @constrain(%self: !struct.struct<@ReadConstBadTypeB<[@T]>>) {
      // expected-error@+1 {{'poly.read_const' op result #0 must be integral, felt, or typevar type, but got '!struct.struct<@ReadConstBadTypeB<[@T]>>'}}
      %0 = poly.read_const @T : !struct.struct<@ReadConstBadTypeB<[@T]>>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ReadConstBadTypeC<[@T]> {
    function.def @compute() -> !struct.struct<@ReadConstBadTypeC<[@T]>> {
      %self = struct.new : !struct.struct<@ReadConstBadTypeC<[@T]>>
      function.return %self : !struct.struct<@ReadConstBadTypeC<[@T]>>
    }
    function.def @constrain(%self: !struct.struct<@ReadConstBadTypeC<[@T]>>) {
      // expected-error@+1 {{'poly.read_const' op result #0 must be integral, felt, or typevar type, but got '!string.string'}}
      %0 = poly.read_const @T : !string.string
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @BadParamTypeA<[@C]> {
    function.def @compute() -> !struct.struct<@BadParamTypeA<[@C]>> {
      %self = struct.new : !struct.struct<@BadParamTypeA<[@C]>>
      function.return %self : !struct.struct<@BadParamTypeA<[@C]>>
    }

    function.def @constrain(%self: !struct.struct<@BadParamTypeA<[@C]>>) {
      function.return
    }
  }
  struct.def @BadParamTypeB {
    // expected-error@+1 {{expected a valid LLZK type but found 'f32'}}
    struct.field @f3 : !struct.struct<@BadParamTypeA<[f32]>>

    function.def @compute() -> !struct.struct<@BadParamTypeB> {
      %self = struct.new : !struct.struct<@BadParamTypeB>
      function.return %self : !struct.struct<@BadParamTypeB>
    }

    function.def @constrain(%self: !struct.struct<@BadParamTypeB>) {
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @DeepInvalidArrayTypeA<[@C]> {
    function.def @compute() -> !struct.struct<@DeepInvalidArrayTypeA<[@C]>> {
      %self = struct.new : !struct.struct<@DeepInvalidArrayTypeA<[@C]>>
      function.return %self : !struct.struct<@DeepInvalidArrayTypeA<[@C]>>
    }

    function.def @constrain(%self: !struct.struct<@DeepInvalidArrayTypeA<[@C]>>) {
      function.return
    }
  }

  function.def private @in_return_deep() ->
    !array.array<2 x
      !struct.struct<@DeepInvalidArrayTypeA<[
        !array.array<2 x
          !struct.struct<@DeepInvalidArrayTypeA<[
            !struct.struct<@DeepInvalidArrayTypeA<[
              !array.array<2 x !array.array<4 x i1>> // expected-error {{'array.array' element type cannot be 'array.array'}}
            ]>> // expected-error {{failed to parse struct parameters}}
          ]>> // expected-error {{failed to parse struct parameters}}
        > // expected-error {{failed to parse LLZK_ArrayType parameter 'elementType' which is to be a `::mlir::Type`}}
      ]>> // expected-error {{failed to parse struct parameters}}
    > // expected-error {{failed to parse LLZK_ArrayType parameter 'elementType' which is to be a `::mlir::Type`}}
}

// -----

#map = affine_map<(i) -> (i, 2)>
module attributes {veridise.lang = "llzk"} {
  // This would also trigger {{'struct.def' op attribute 'const_params' failed to satisfy constraint: flat symbol ref array attribute}},
  // but the below error fires first.
  struct.def @Foo<[@N, @P, #map]> {
    // expected-error@+1 {{AffineMapAttr must yield a single result, but found 2 results}}
    function.def @compute() -> !struct.struct<@Foo<[@N, @P, #map]>> {
      %self = struct.new : !struct.struct<@Foo<[@N, @P, #map]>>
      function.return %self : !struct.struct<@Foo<[@N, @P, #map]>>
    }

    function.def @constrain(%self: !struct.struct<@Foo<[@N, @P, #map]>>) {
      function.return
    }
  }
}

// -----

#map = affine_map<(i) -> ()>
module attributes {veridise.lang = "llzk"} {
  struct.def @Foo<[@N, @P, @A]> {
    function.def @compute() -> !struct.struct<@Foo<[@N, @P, @A]>> {
      %self = struct.new : !struct.struct<@Foo<[@N, @P, @A]>>
      function.return %self : !struct.struct<@Foo<[@N, @P, @A]>>
    }

    function.def @constrain(%self: !struct.struct<@Foo<[@N, @P, @A]>>) {
      function.return
    }
  }

  struct.def @Bar<[@N, @P]> {
     // expected-error@+1 {{AffineMapAttr must yield a single result, but found 0 results}}
    struct.field @foo: !struct.struct<@Foo<[@N, @P, #map]>>

    function.def @compute() -> !struct.struct<@Bar<[@N, @P]>> {
      %self = struct.new : !struct.struct<@Bar<[@N, @P]>>
      function.return %self : !struct.struct<@Bar<[@N, @P]>>
    }

    function.def @constrain(%self: !struct.struct<@Bar<[@N, @P]>>) {
      function.return
    }
  }
}
